# llm-smart-router

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  router_config.example.yaml
.claude/: settings.local.json
src/smart_router/: classifier.py  config.py  heuristics.py  main.py  models.py  proxy.py  router.py
tests/: conftest.py  test_api.py  test_config.py  test_heuristics.py  test_models.py  test_router.py
